Cleanup lamda expression to reduce verbosity